# mutest-rs-research

./: .gitignore  Cargo.toml
mutest-driver-cli/src/: common.rs  lib.rs
mutest-inspector/: Cargo.toml
mutest-inspector/src/: common.rs  config.rs  file_tree.rs  files.rs  lib.rs  main.rs  mutations.rs  renderer.rs  rs_renderer.rs
mutest-inspector/src/assets/static/icons/: license.txt
mutest-inspector/src/assets/static/scripts/: code-main.js  collapser.js  file-tree.js  mutations.js  search-main.js  search.js  trace-main.js
mutest-inspector/src/assets/static/styles/: style.css
mutest-inspector/src/assets/themes/: darcula_theme.md
mutest-inspector/src/styles/: style.css
mutest-inspector/src/templates/: layout.html
mutest-ui/: Cargo.toml
mutest-ui/src/: common.rs  config.rs  file_tree.rs  files.rs  formatter.rs  lib.rs  main.rs  mutations.rs  renderer.rs  rs_renderer.rs
mutest-ui/src/assets/static/scripts/: code-main.js  collapser.js  file-tree.js  mutation-switcher.js  query.js  trace-main.js
mutest-ui/src/assets/static/styles/: style.css
mutest-ui/src/scripts/: code-collapser.js  code-main.js  file-tree.js  files.js  mutation-switcher.js  mutations.js  search.js
mutest-ui/src/styles/: style.css
