# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mutest-inspector"
version = "0.0.0"
authors = ["Zalán Bálint Lévai"]
description = "Interactive mutation inspector for mutest-rs."
keywords = ["mutation", "mutation-analysis", "mutation-testing", "testing"]
categories = ["development-tools::testing", "development-tools::cargo-plugins", "security"]
homepage = "https://mutest.rs"
repository = "https://github.com/zalanlevai/mutest-rs"
license = "Apache-2.0 OR MIT"
edition = "2024"

[dependencies]
mutest-driver-cli = { path = "../mutest-driver-cli" }
mutest-json = { path = "../mutest-json" }

clap = { version = "4", features = ["cargo", "derive"] }

serde = "1.0"
serde_json = "1.0"

syntect = "5.0"
log = "0.4.27"
similar = "2.7.0"
html-escape = "0.2.13"
uuid = {  version = "1.17.0", features = ["v4"] }

[features]
default = []
rustc = []
