[package]
name = "mutest-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
mutest-driver-cli = { path = '../mutest-driver-cli' }
mutest-json = { path = '../mutest-json' }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["cargo", "derive"] }
syntect = "5.0"
similar = "2.7.0"
html-escape = "0.2.13"
uuid = {  version = "1.17.0", features = ["v4"] }
actix-web = "4.11.0"
actix-files = "0.6.6"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = []
rustc = []
